# HotWordsAnalysisSystem

./: README.md  main.py  pyproject.toml  requirements.txt  run.bat  run_auto.bat  test.bat
data/: input_interactive.txt  results.json
src/: datapacket.py  datasource.py  hotwordapp.py  reporter.py  textprocessor.py  timewindow.py  visualize.py
tests/: benchmark_core.py  benchmark_system.py  generate_charts.py  test_processor.py  test_timewindow.py
tests/data/: system_bench.txt
