[project]
name = "hotwordsanalysissystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "jieba>=0.42.1",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psutil>=7.2.0",
    "streamlit>=1.52.2",
]
